html, css 파일 편집

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet" type='text/css'>
-        <title>Image Classification WebApp</title>
+        <title>상품 인식 시스템</title>
         <meta name="keywords" content="cutom file input, styling, label, cross-browser, accessible, input type file" />
 		
 		<style>
@@ -23,7 +23,7 @@
 			.bg-img{
 				width: 100%;
 				height: 100vh;
-				background-image:linear-gradient(rgba(0, 0, 0, 0.71),rgba(0, 0, 0, 0.7)),url('static/css/front.jpg');
+				background-color: black;
 				background-size: cover;
 				background-position: center;
 			}
@@ -40,7 +40,7 @@
 
         <div style = "width : 100%; padding-top : 5%;">
             <div class = "header-content">
-                 <h1 style = "text-align: center;color: white"><span class="header-content-text">저시력 장애인을 위한 상품 인식 시스템</span></h1>
+                 <h1 style = "text-align: center;color: white"><span class="header-content-text"><b>저시력 장애인을 위한 상품 인식 시스템</b></span></h1>
             </div>
         </div>
 
@@ -55,10 +55,11 @@
 
         <div class = "footer">
             <div class = "header-content-sub">
-                    <p style = "text-align: center;color: white" class="header-content-info">촬영한 제품 사진을 업로드해주세요</p>
+                    <p style = "text-align: center;color: white" class="header-content-info"><br><b>촬영한 제품 사진을 선택해주세요</b></p>
             </div>
+
             <div class = "header-content-sub">
-                    <p style = "text-align: center;color:orange" class="header-content-info">화이트하임, 꼬북칩, 새우깡, 후렌치파이, 벌집핏자, 아몬드 빼빼로, 오레오, 양파링, 포카칩 오리지널, 바나나킥</p>
+                    <p style = "text-align: center;color:orange" class="header-content-info"><br>- 사용 가이드 -<br><b>jpg, jpeg, png, heic</b> 파일만<br>선택 가능합니다</p>
             </div>
         </div>
 	     </div>  
