--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,8 +13,8 @@ html {
 .index-main
 {
     width: 100%;
-    height: 100vh;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.71),rgba(0, 0, 0, 0.7)),url('front.jpg');
+    height: 100%;
+    background-color: black;
     background-size: cover;
     background-position: center;
 }
@@ -47,7 +47,7 @@ html {
 
 .header-content-info
 {
-    font-size: 18px;
+    font-size: 30px;
     color: #f4f7c5;
 }
 
@@ -69,14 +69,14 @@ html {
 {
     padding-left: 4%;
     padding-right: 4%;
-    width: 100%;
+    width: 120%;
     display: flex;
     justify-content: space-between;
 }
 
 .file-form-input
 {
-    max-width: 50%;
+    max-width: 100%;
     border-radius: 200px;
     border: 1px solid #41b3a3;
     color: white;
@@ -95,10 +95,10 @@ html {
 
 .btn
 {
-    width: 10%;
+    width: 100%;
     font-size: 20px!important;
     height: 15%;
-    max-width: 30%;
+    max-width: 25%;
 }
 
 
@@ -271,6 +271,7 @@ html {
         line-height: 1
     }
 
+
     .link-form-input
     {
         font-size: 11px;
@@ -339,13 +340,15 @@ html {
         line-height: 1
     }
 
+
     .link-form-input
     {
         font-size: 12px;
         padding: 1px 15px 1px 15px;
     }
 
-        .upload-file
+
+    .upload-file
     {
         margin-top: 3%;
         margin-bottom: 3%;
@@ -362,6 +365,7 @@ html {
     {
         margin-top: 10%!important;
     }
+
 
 
 }
