--- a/static/css/styleSucc.css
+++ b/static/css/styleSucc.css
@@ -17,7 +17,7 @@ html {
 }
 
 .second-main{
-    background-image:linear-gradient(rgba(0, 0, 0, 0.71),rgba(0, 0, 0, 0.7)),url('b4.jpg');
+    background-color: black;
     background-size: cover;
     background-position: center;
     height: 100vh;   
@@ -66,7 +66,7 @@ th
 
 .header-text
 {
-    letter-spacing: 1px;
+    letter-spacing: 2px;
 }
 
 .table-custom
