--- a/templates/home.html
+++ b/templates/home.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class = "header-content-sub">
-                    <p style = "text-align: center;color:orange" class="header-content-info"><br>- 사용 가이드 -<br><b>jpg, jpeg, png, heic</b> 파일만<br>선택 가능합니다</p>
+                    <p style = "text-align: center;color:orange" class="header-content-info"><br>- 사용 가이드 -<br><b>jpg, jpeg, png, heic</b> 파일만<br>업로드 가능합니다</p>
             </div>
         </div>
 	     </div>  
