#8 MySQL Connection, Emoji

--- a/templates/home.html
+++ b/templates/home.html
@@ -55,11 +55,11 @@
 
         <div class = "footer">
             <div class = "header-content-sub">
-                    <p style = "text-align: center;color: white" class="header-content-info"><br><b>촬영한 제품 사진을 선택해주세요</b></p>
+                    <p style = "text-align: center;color: white" class="header-content-info"><br><b>갤러리에서 제품 사진을<br>선택해주세요📷</br></b></p>
             </div>
 
             <div class = "header-content-sub">
-                    <p style = "text-align: center;color:orange" class="header-content-info"><br>- 사용 가이드 -<br><b>jpg, jpeg, png, heic</b> 파일만<br>업로드 가능합니다</p>
+                    <p style = "text-align: center;color:orange" class="header-content-info"><br>📢 사용 가이드<br><b>jpg, jpeg, png</b> 파일만<br>업로드 가능합니다</p>
             </div>
         </div>
 	     </div>  
